--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,28 @@ body{
 
 .tableauProjet{
 	table-layout: fixed;
+	width:100%;
+	text-align:left;
+	text-transform:justify;
 }
 
 .tableauTache{
 	width : 100%;
 	table-layout: fixed;	
+}
+
+.panelFonctionnalite{
+	width: 400px;
+	margin : 5px;
+	display:inline-block;
+	background-color: rgba(215, 215, 215, 0.85);
+}
+.justifyTd {
+	text-align: justify;
+	padding-right : 10px; 
+	vertical-align:top;
+	padding-top:10px;
+	width:100%;
 }
 
 .tableauProjet tr{
@@ -166,11 +183,6 @@ html>body #sortable li { height: 1.5em; line-height: 1.2em; }
 	text-align:right;
 }
 
-.linkAriane{
-	color : blue;
-	text-decoration:underline; 
-}
-
 .linkArianeLast{
 	color : black;
 	text-decoration:none; 
@@ -185,29 +197,32 @@ html>body #sortable li { height: 1.5em; line-height: 1.2em; }
 }
 
 .btn {
-	background-color: rgba(94, 141, 180, .6);
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	border-radius:3px;
-	border:1px solid #124d77;
+	background-color: rgba(117,125,111, .6);
+	background-color:#dbe6c4;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #b2b8ad;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:#757d6f;
 	font-family:Arial;
-	font-size:13px;
+	font-size:15px;
+	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #154682;
+	text-shadow:0px 1px 0px #ced9bf;
 }
+
 .btn:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
-	background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
-	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
-	background-color:#0061a7;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9ba892), color-stop(1, #dbe6c4));
+	background:-moz-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-webkit-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-o-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-ms-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:linear-gradient(to bottom, #9ba892 5%, #dbe6c4 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9ba892', endColorstr='#dbe6c4',GradientType=0);
+	background-color:#9ba892;
 }
 .btn:active {
 	position:relative;
