--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 .mainPage h2{
-	font-size:140%;
+	font-size:120%;
 }
 
 .mainGestion{
@@ -327,4 +327,10 @@ html>body #sortable li { height: 1.5em; line-height: 1.2em; }
 	display:inline;
 	border-radius:50%;
 	width:30px;
+}
+
+.modifierDescriptionFonctionnalite{
+	font-size:13px;
+	height : 150px;
+	overflow:auto;
 }
